<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.masanori_acer.jogrecord.MapsActivity" >

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/text_on"
        android:textOff="@string/text_off"
        android:id="@+id/toggleButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="@string/eltime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/toggleButton"
        android:id="@+id/tvEltime" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometer"
        android:format="@string/chronometer_format"
        android:layout_toRightOf="@+id/tvEltime"
        android:layout_marginLeft="4dp"
        android:layout_alignBaseline="@+id/tvEltime"/>

    <TextView
        android:text="@string/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDistance"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/chronometer"/>

    <TextView
        android:text="0.000km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvDistance"
        android:layout_marginLeft="4dp"
        android:textStyle="bold"
        android:id="@+id/disText" />

    <TextView
        android:text="@string/position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/toggleButton"
        android:layout_below="@+id/tvEltime"
        android:id="@+id/tvPosition" />

    <TextView
        android:text="ここに住所を表示"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvPosition"
        android:layout_below="@id/tvDistance"
        android:layout_marginLeft="4dp"
        android:id="@+id/address" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toggleButton"
        android:layout_marginTop="10dp"
        tools:context="com.example.masanori_acer.jogrecord.MapsActivity" />
</RelativeLayout>
